Implement Redis caching with support for local and serverless modes. Add search cache functionality and improve error handling for cache operations.
Signed-off-by: subh05sus <sahasubhadipfkk@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
 # Database
 DATABASE_URL="postgresql://username:password@localhost:5432/social_media_trends"
 
-# Redis
-UPSTASH_REDIS_REST_URL=""
-UPSTASH_REDIS_REST_TOKEN=""
+# Redis Configuration
+REDIS_MODE=local # Options: local, serverless
+REDIS_URL=redis://localhost:6379 # For local Redis
+UPSTASH_REDIS_REST_URL=https://your-instance.upstash.io # For serverless Redis
+UPSTASH_REDIS_REST_TOKEN=your_token_here # For serverless Redis
 
 # NextAuth
 NEXTAUTH_URL="http://localhost:3000"
